# sql-bulk-import

./: .gitignore  .rspec  .rubocop.yml  Cargo.toml  Gemfile  Rakefile  compose.yml  readme.md  setup-database.sh  sql-bulk-import.gemspec
ext/sql_bulk_import_rs/: Cargo.toml  extconf.rb
ext/sql_bulk_import_rs/src/: lib.rs
lib/: sql-bulk-import.rb
lib/sql_bulk_import/: version.rb
spec/: benchmarks_spec.rb  spec_helper.rb  sql_bulk_import_spec.rb
spec/fixtures/expected/: _0__weirdname.csv  blank_column_headers.csv  data_types.csv  duplicate_column_headers.csv  header_trailing_comma.csv
spec/fixtures/import/: blank_column_headers.csv  data_types.csv  duplicate_column_headers.csv  header_trailing_comma.csv
spec/fixtures/round_trip/: empty_fields.csv  normal.csv
