[package]
name = "sql_bulk_import_rs"
version = "1.0.0"
edition = "2024"

[lib]
name = "sql_bulk_import_rs"
crate-type = ["cdylib"]

[dependencies]
csv = "1.3"
futures-util = "0.3"
lucchetto = "0.4"
magnus = "0.7"
ruby = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiberius = { version = "0.12", default-features = false, features = ["rustls", "tds73", "time"] }
tokio = { version = "1.45", features = ["full"] }
tokio-util = "0.7"
